--- a/Discussions.css
+++ b/Discussions.css
@@ -85,7 +85,7 @@ button:hover {
 /* Discussion title and content */
 .discussion h3 {
     margin: 0 0 10px;
-    color: #d3f517; /* White for titles */
+    color: #43a8ec; /* White for titles */
     font-size: 1.5em;
     word-wrap: break-word; /* Allow long words to break */
 }
